complete result , payment page

--- a/online-shop/payment-page/index.html
+++ b/online-shop/payment-page/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/style.css" />
     <title>Document</title>
-</head>
-<body>
-    ffsafafafsafafa
-</body>
+  </head>
+  <body>
+    <img src="./src/payment.png" />
+    <div class="buttons">
+      <button class="pay" onclick="payment()">پرداخت</button>
+      <button class="cancel" onclick="cancel()">انصراف</button>
+    </div>
+    <script src="./src/script.js"></script>
+  </body>
 </html>
